# standard-RAxML

./: CMakeLists.txt  axml.c  axml.h  bipartitionList.c  globalVariables.h  rmq.h  treeIO.c
